--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -11,17 +11,17 @@
 This Scenario plays out over 14 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
-\textbf{Player Count:} 3 or 6P FFA, 2v2v2 alliance.
+\textbf{Player Count:} 3-6P FFA, 2v2v2 alliance.
 
-\textbf{Starting Resources:} 14 \svg{gold}, 4 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 14 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 1 × Pack cheapest \bronze\ Units
-  \item 1 × Chosen Neutral \bronze\ Unit from the Faction of the closest player
+  \item 1 × Pack of cheapest \bronze\ Units
+  \item 1 × Chosen Neutral \bronze\ Unit of the closest starting player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -40,24 +40,25 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-The game ends when one player has defeated each other player's Main Hero once \textit{or} at the end of Round 14.
+The game ends when any of the following conditions are met:
+\begin{itemize}
+  \item One player has defeated each other player's Main Hero once. \textit{That player wins the game immediately}
+  \item At the end of Round 14.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
-The player with the most Victory Points (VP) wins (see Tournament Book). Players gain:
-
+If no player has achieved immediate victory, the player with the most Victory Points (VPs) wins. Players gain:
 \begin{itemize}
-  \item 3 VPs for defeating another player's Main Hero
-  \item +2 VPs for defeating the closest starting player's Main Hero
-  \item 2 VPs for the Grail Token
-  \item 2 VPs for winning a Level VII Neutral Combat
-  \item 1 VP for losing a Combat against another player's Main Hero
+  \item 2 VP for defeating the closest starting player's Main Hero
+  \item 1 VP for defeating another player's Main Hero
+  \item 1 VP for the Grail Token
+  \item 1 VP for Controlling Dragon Utopia, Random Town or level VII Settlement
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
-
 \textbf{End of \nth{2} Round:}
 \begin{itemize}
-  \item Each player may resolve all the Fields that the player closest to them visited this Round.
+  \item Each player may resolve all the Fields that their closest starting player visited this Round.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
@@ -69,28 +70,23 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item All players may recruit a Secondary Hero for free.
+  \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
-\textbf{\nth{9} Round:}
+\textbf{\nth{10} Round:}
 \begin{itemize}
-  \item Repeat event of Round 4.
-\end{itemize}
-\textbf{\nth{11} Round:}
-\begin{itemize}
-  \item Each player may recruit one Neutral \silver\ Unit of the closest player's Faction for half its recruitment cost.
+  \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
-
 \begin{itemize}
   \item When a Hero moves to a Starting Town, that Hero gains +1 \svgeven{movement}.
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up).
-  \item \textbf{Random Town:} On next Resource Round, you may recruit one \silver\ Unit from that Faction by paying its full recruitment cost.
+  \item \textbf{Random Town:} On next Resource Round, you may recruit one Unit from that Faction by paying its full recruitment cost.
   \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
-  \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase income.
+  \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase 1 income.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Statistic Card from their deck of M\&M.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
