victory condition and town buildings change

--- a/draft-scenarios/clash/mines_of_moria.tex
+++ b/draft-scenarios/clash/mines_of_moria.tex
@@ -25,11 +25,11 @@ This Scenario plays out over 8-10 Rounds.
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \bronze\ Dwelling
-  \item City Hall
+  \item Citadel
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
-Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
+Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
   \item 4 × Starting (I) Map Tiles
@@ -38,7 +38,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Condition}}
-When a player captures their \nth{6} mine all players -- including that player -- take one final turn. After these turns the game ends. The player who controls the most mines is the winner. If there is a tie, the tied player with most \svg{gold} wins.
+When a player captures their \nth{6} mine all players -- including that player -- take one final turn. After these turns or at the end of \nth{10} Round the game ends. The player who controls the most mines is the winner. If there is a tie, the tied player with most \svg{gold} wins.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
@@ -66,7 +66,7 @@ When a player captures their \nth{6} mine all players -- including that player -
 
 \begin{center}
   \vfill
-  \includegraphics[width=0.95\linewidth]{\maps/mines.png}
+  \includegraphics[width=0.93\linewidth]{\maps/mines.png}
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
   \vfill
 \end{center}
