[FR] Weblate/update translations (#239)
Co-authored-by: Nohud <nohud@hotmail.fr>
Co-authored-by: github-actions <github-actions@github.com>

--- a/translations/castle_greek_gift.tex/fr.po
+++ b/translations/castle_greek_gift.tex/fr.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2025-04-14 07:17+0100\n"
-"PO-Revision-Date: 2025-05-15 08:02+0000\n"
-"Last-Translator: SkullsuiT <jfdswhaos@gmail.com>\n"
+"PO-Revision-Date: 2025-05-16 12:06+0000\n"
+"Last-Translator: Nohud <nohud@hotmail.fr>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/campaigns/castle_greek_gift/fr/>\n"
 "Language: fr\n"
@@ -50,6 +50,8 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
+"\\textbf{Bâtiments de la ville :} \\bronze\\ Dwelling, Citadel\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:44 coops/close_to_enemies.tex:39
