--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 14 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 1 × Pack of cheapest \bronze\ Units
+  %\item 1 × Pack of cheapest \bronze\ Units
   \item 1 × Chosen Neutral \bronze\ Unit of the closest starting player's Faction
 \end{itemize}
 
@@ -34,7 +34,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \begin{itemize}
   \item 6 × Starting (I) Map Tiles
-  \item 3 × Far (II-III) Map Tiles for each player's Map Pool
+  \item 2 × Far (II-III) Map Tiles for each player
   \item 12 × Near (IV-V) Map Tiles
   \item 3 × Center (VI-VII) Map Tiles
 \end{itemize}
@@ -52,7 +52,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
   \item 2 VP for defeating the closest starting player's Main Hero
   \item 1 VP for defeating another player's Main Hero
   \item 1 VP for the Grail Token
-  \item 1 VP for Controlling Dragon Utopia, Random Town or level VII Settlement
+  \item 1 VP for winning a level VII Combat
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -60,19 +60,19 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \begin{itemize}
   \item Each player may resolve all the Fields that their closest starting player visited this Round.
 \end{itemize}
-\textbf{\nth{4} Round:}
+\textbf{\nth{5} Round:}
 \begin{itemize}
   \item Remove all Black Cubes from the map except from Learning Stones.
-\end{itemize}
-\textbf{\nth{6} Round:}
-\begin{itemize}
-  \item Each player may remove up to 3 Black Cubes from the map.
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
   \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
 \textbf{\nth{10} Round:}
+\begin{itemize}
+  \item Repeat event of Round 4.
+\end{itemize}
+\textbf{\nth{12} Round:}
 \begin{itemize}
   \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
@@ -83,15 +83,17 @@ If no player has achieved immediate victory, the player with the most Victory Po
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up).
-  \item \textbf{Random Town:} On next Resource Round, you may recruit one Unit from that Faction by paying its full recruitment cost.
-  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
+  \item \textbf{Random Town:} On next Resource Round, you may recruit one Unit from that Faction for free.
+  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold} and 2 \svg{valuables}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
-  \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase 1 income.
+  \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase all incomes by one space.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Statistic Card from their deck of M\&M.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
   \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
 \end{itemize}
+
+\vspace*{\fill}
 
 \begin{center}
   \vspace*{\fill}
@@ -102,5 +104,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
   \captionof{figure}{\textbf{ALTERNATIVE MAP LAYOUT}}
   \vspace*{\fill}
 \end{center}
+
+\vspace*{\fill}
 
 \end{multicols*}
