--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -52,7 +52,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
   \item 2 VP for defeating the closest starting player's Main Hero
   \item 1 VP for defeating another player's Main Hero
   \item 1 VP for the Grail Token
-  \item 1 VP for winning a level VII Combat
+  \item 1 VP for winning a Level VII Combat
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -88,7 +88,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
   \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
   \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase all incomes by one space.
   \item Level VII Neutral Combats cannot be skipped.
-  \item A defeated Main Hero may Empower one Statistic Card from their deck of M\&M.
+  \item A defeated Main Hero may Empower one Statistic Card from their Deck of M\&M.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
   \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
 \end{itemize}
