--- a/translations/credits.tex/cs.po
+++ b/translations/credits.tex/cs.po
@@ -124,7 +124,7 @@ msgid ""
 "\\phantom{Translators placeholder}\n"
 "\n"
 msgstr ""
-"\\textbf{Překlad do češtiny}: Tomáš Zeman\n"
+"\\textbf{Překlad do češtiny}: Tomáš Zeman, Jakub Klus\n"
 "\n"
 
 #. type: multicols*
