--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -444,8 +444,8 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armáda:}\n"
 "    \\begin{itemize}\n"
-"      \\item A Hrstka Elfů\n"
-"      \\item Neutrální Armáda na stejné Úrovni jako váš Hrdina\\footnote{Viz ``Tabulka Obtížností'' na straně 35 Knihy Základních Pravidel.}\n"
+"      \\item Hrstka Elfů\n"
+"      \\item Neutrální Armáda na stejné Úrovni jako váš Hrdina\\footnote{Viz \\uv{Tabulka Obtížností} na straně 35 Knihy Základních Pravidel.}\n"
 "    \\end{itemize}\n"
 "  \\item \\textbf{Balíček AI:}\n"
 "    \\begin{itemize}\n"
@@ -774,8 +774,8 @@ msgstr ""
 "    };\n"
 "  \\node at (2.0, 0.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
 "  \\node at (13.0, -0.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"  \\node at (5.0, -11.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
-"  \\node at (5.0, -11.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};  "
+"  \\node at (4.3, -11.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
+"  \\node at (4.3, -11.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};  "
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:206
