reordered rules and map layouts

--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -79,32 +79,38 @@ If no player has achieved immediate victory, the player with the most Victory Po
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item When a Hero moves to a Starting Town, that Hero gains +1 \svgeven{movement}.
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up).
   \item \textbf{Random Town:} On next Resource Round, you may recruit one Unit from the defending Faction for free.
-  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold} and 2 \svg{valuables}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
-  \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
   \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase all incomes by one space.
   \item Level VII Neutral Combats cannot be skipped.
-  \item A defeated Main Hero may Empower one Statistic Card from their Deck of M\&M.
-  \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
-  \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
 \end{itemize}
-
-\vspace*{\fill}
 
 \begin{center}
   \vspace*{\fill}
   \includegraphics[width=1.0\linewidth]{\maps/shattered_alliance-6p.png}
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
   \vspace*{\fill}
-  \includegraphics[width=1.1\linewidth]{\maps/shattered_alliance_alt-6p.png}
+\end{center}
+
+\columnbreak
+
+\begin{itemize}
+  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold} and 2 \svg{valuables}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
+  \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
+  \item A defeated Main Hero may Empower one Statistic Card from their Deck of M\&M.
+  \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
+  \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
+  \item When a Hero moves to a Starting Town, that Hero gains +1 \svgeven{movement}.
+\end{itemize}
+
+\vspace*{\fill}
+
+\begin{center}
+  \includegraphics[width=1.0\linewidth]{\maps/shattered_alliance_alt-6p.png}
   \captionof{figure}{\textbf{ALTERNATIVE MAP LAYOUT}}
   \vspace*{\fill}
 \end{center}
-
-\vspace*{\fill}
 
 \end{multicols*}
