--- a/draft-scenarios/clash/mines_of_moria.tex
+++ b/draft-scenarios/clash/mines_of_moria.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Mines of Moria}{\images/mines.png}
+\addscenariosection{1}{Clash Scenario}{The Six Shafts}{\images/mines.png}
 
 \begin{multicols*}{2}
 
