--- a/draft-scenarios/clash/mines_of_eldurim.tex
+++ b/draft-scenarios/clash/mines_of_eldurim.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{The Six Shafts}{\images/mines.png}
+\addscenariosection{1}{Clash Scenario}{The Mines of Eldurim}{\images/mines.png}
 
 \begin{multicols*}{2}
 
