--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash/Alliance Scenario}{The Shattered Alliance}{\images/implosion.png}
+\addscenariosection{1}{Clash/Alliance Scenario}{Shattered Alliance}{\images/implosion.png}
 
 \begin{multicols*}{2}
 
@@ -11,16 +11,17 @@
 This Scenario plays out over 14 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
-\textbf{Player Count:} 3 or 6P FFA, 2v2v2 alliance.
+\textbf{Player Count:} 3-6P FFA, 2v2v2 alliance.
 
-\textbf{Starting Resources:} 14 \svg{gold}, 4 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 14 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Few cheapest \svg{bronze} Units
+  %\item 1 × Pack of cheapest \bronze\ Units
+  \item 1 × Chosen Neutral \bronze\ Unit of the closest starting player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -33,63 +34,47 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \begin{itemize}
   \item 6 × Starting (I) Map Tiles
-  \item 3 × Far (II-III) Map Tiles for each player's Map Pool
+  \item 2 × Far (II-III) Map Tiles for each player
   \item 12 × Near (IV-V) Map Tiles
   \item 3 × Center (VI-VII) Map Tiles
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-The game ends when one player has defeated each other players' Main Hero once \textit{or} at the end of Round 14.
+The game ends when any of the following conditions are met:
+\begin{itemize}
+  \item One player has defeated each other player's Main Hero once. \textit{That player wins the game immediately}
+  \item At the end of Round 14.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
-The player with the most Victory Points (VP) wins (see Tournament Book). Players gain:
-
+If no player has achieved immediate victory, the player with the most Victory Points (VPs) wins. Players gain:
 \begin{itemize}
-  \item 1 VP for losing a Combat against another player
-  \item 1 VP for each Starting Town captured - \textit{once per captured Faction}
+  \item 2 VP for defeating the closest starting player's Main Hero
+  \item 1 VP for defeating another player's Main Hero
   \item 1 VP for the Grail Token
-  \item 2 VP for winning a Level VII Neutral Combat
-  \item 1 VP for every controlled Mine or Settlement on Near and Center Tiles
-  \item Removed Artifacts count towards VPs
+  \item 1 VP for winning a Level VII Combat
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
-
-\textbf{\nth{1} Round:}
+\textbf{End of \nth{2} Round:}
 \begin{itemize}
-  \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
+  \item Each player may resolve all the Fields that their closest starting player visited this Round.
 \end{itemize}
-\textbf{\nth{2} Round:}
+\textbf{\nth{5} Round:}
 \begin{itemize}
-  \item Each player may gain one reward from the Field that the closest player to them visits this Round.
+  \item Remove all Black Cubes from the map except from Learning Stones.
 \end{itemize}
-\textbf{\nth{4} Round:}
+\textbf{\nth{7} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
-\end{itemize}
-\textbf{\nth{6} Round:}
-\begin{itemize}
-  \item Secondary Heroes gain +1 \svgeven{movement}.
-\end{itemize}
-\textbf{\nth{8} Round:}
-\begin{itemize}
-  \item Each player may remove up to 5 Black Cubes from the map.
-\end{itemize}
-\textbf{\nth{9} Round:}
-\begin{itemize}
-  \item Player(s) whose Main Hero has the least \svg{experience} roll 2 \svg{resource}.
+  \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
 \textbf{\nth{10} Round:}
 \begin{itemize}
-  \item All players may recruit a Secondary Hero for free.
-\end{itemize}
-\textbf{\nth{11} Round:}
-\begin{itemize}
-  \item Remove all Black Cubes.
+  \item Repeat event of Round 5.
 \end{itemize}
 \textbf{\nth{12} Round:}
 \begin{itemize}
-  \item Each player may recruit one \silver\ Neutral Unit from the closest player's Faction for half its recruitment cost.
+  \item Each player may recruit one Neutral \silver\ Unit of the their closest starting player's Faction for half its recruitment cost.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -97,16 +82,9 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up).
-  \item \textbf{Random Town:} On next Resource Round, you may recruit one random Neutral \silver\ Unit by paying its full \svg{pay_v2} cost.
-  \item \textbf{Grail Field:} Gain the Grail Token.
-  \item If you start a turn with the Grail Token, gain \svg{morale_positive} \textit{and} 5 \svg{gold}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
-  \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
-  \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase income.
-  \item Level VII Neutral Combats cannot be skipped and grant the player \svg{morale_positive}.
-  \item Players do not have to pay \svg{gold} after losing a Combat against another player.
-  \item A defeated Main Hero may Empower one Statistic Card from their hand or Discard Pile \textit{and} gain \svg{morale_positive}.
-  \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
-  \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
+  \item \textbf{Random Town:} On next Resource Round, you may recruit one Unit from the defending Faction for free.
+  \item \textbf{Level VII Settlement:} You may Reinforce \textbf{and} increase all incomes by one space.
+  \item Level VII Neutral Combats cannot be skipped.
 \end{itemize}
 
 \begin{center}
@@ -114,7 +92,23 @@ The player with the most Victory Points (VP) wins (see Tournament Book). Players
   \includegraphics[width=1.0\linewidth]{\maps/shattered_alliance-6p.png}
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
   \vspace*{\fill}
-  \includegraphics[width=1.1\linewidth]{\maps/shattered_alliance_alt-6p.png}
+\end{center}
+
+\columnbreak
+
+\begin{itemize}
+  \item \textbf{Grail Token:} If you start your turn with the Grail Token, gain \svg{morale_positive}, 10 \svg{gold} and 2 \svg{valuables}. If a Hero with the Grail Token is defeated, the Grail Token is given to the winner of that Combat.
+  \item If a Hero with the Grail Token uses Dimension Door, Fly, or Town Portal, the Grail Token is dropped on the origin Field before the Hero moves.
+  \item A defeated Main Hero may Empower one Statistic Card from their Deck of M\&M.
+  \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
+  \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
+  \item When a Hero moves to a Starting Town, that Hero gains +1 \svgeven{movement}.
+\end{itemize}
+
+\vspace*{\fill}
+
+\begin{center}
+  \includegraphics[width=1.0\linewidth]{\maps/shattered_alliance_alt-6p.png}
   \captionof{figure}{\textbf{ALTERNATIVE MAP LAYOUT}}
   \vspace*{\fill}
 \end{center}
