--- a/draft-scenarios/clash/trial_by_combat.tex
+++ b/draft-scenarios/clash/trial_by_combat.tex
@@ -8,7 +8,7 @@
 \textit{There is no honor — only victory or death. The weak will fall, the strong will fight, and only one will rule.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario plays out over 8 Rounds.
+This Scenario plays out over 8-10 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 4
@@ -20,14 +20,14 @@ This Scenario plays out over 8 Rounds.
 \textbf{Starting Units:}
 \begin{itemize}
   \item A Few cheapest \silver\ Units
-  \item 1 random Neutral \bronze\ Unit
+  \item Search (2) Neutral \bronze\ Unit Deck
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \bronze\ Dwelling
   \item City Hall
-  \item \svg{building_special_tent} Building
+  \item Mage Guild
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -36,20 +36,14 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item 2P × Far (II-III) Map Tiles
-  \item 2P × Near (IV-V) Map Tiles
+  \item 2P × Near (IV-V) Map Tiles (one with Obelisk, adjacent to Center Map Tile)
   \item 1 × Center Map Tile. The center Field is ``The Hill''
 \end{itemize}
 
-\subsection*{\MakeUppercase{Victory Points}}
-After Round 8, the player with the most Victory Points (VP) wins (see Tournament Book). Players also gain:
-\begin{itemize}
-  \item 5 VP for the first player flagging ``The Hill''
-  \item 2 VP at the end of every Round for the player who controls ``The Hill''
-  \item 1 VP for losing a Combat against another player
-\end{itemize}
+\subsection*{\MakeUppercase{Victory Condition}}
+When any player first flags ``The Hill'', each player, including the one who flagged it, gets two more full turns. After all players have completed their turns, the game ends, and the player who controls ``The Hill'' at that time wins. However, if ``The Hill'' has not been flagged by the start of Round 9, the first player to flag it during or after Round 9 immediately wins the game.
 
 \subsection*{\MakeUppercase{Timed Events}}
-
 \textbf{\nth{1} Round:}
 \begin{itemize}
   \item All Heroes gain +1 \svgeven{movement}.
@@ -58,25 +52,27 @@ After Round 8, the player with the most Victory Points (VP) wins (see Tournament
 \begin{itemize}
   \item Players may gain either 10 \svg{gold}, 4 \svg{building_materials} or 2 \svg{valuables}.
 \end{itemize}
+\textbf{\nth{3} Round:}
+\begin{itemize}
+  \item Remove all Black Cubes from the Map.
+\end{itemize}
 \textbf{\nth{5} Round:}
 \begin{itemize}
   \item Remove all Black Cubes.
 \end{itemize}
-\textbf{\nth{7} Round:}
+\textbf{\nth{8} Round:}
 \begin{itemize}
   \item All Heroes gain +1 \svgeven{movement}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Remove ``Unexpected Reinforcements'' from the Astrologers Proclaim Deck.
-  \item \azure\ Units cannot be recruited at any point of the game.
-  \item Citadel cannot be built on Round 1.
+  \item All players gain income every Round.  
   \item The blocked Field on the Center Map Tile is a Magic Spring and does not count as blocked.
   \item All Fields on the Center Map Tile are visitable once per Faction.
   \item Players do not lose \svg{gold} for losing or retreating from any Combat.
-  \item \textbf{Sanctuary:} Empower a Knowledge Statistic Card \textit{or} gain \svg{morale_positive}. \textit{Visitable once per Faction.}
-  \item \textbf{Obelisk:} Draw 1 Card. \textit{Visitable once per Faction.}
+  \item After winning a combat against another player’s Main Hero, you may recruit or reinforce one of your Units that was defeated (reduced to 0 hitpoints) during the battle, at no cost.
+  \item \textbf{Obelisk:} You may spawn your defeated Main Hero on an Obelisk you have flagged. \textit{Flaggable for all players.}
   \item \textit{Optional:} At the beginning of each Round, roll two Attack Dice separately and apply the effect from the table below.
 \end{itemize}
 
@@ -109,8 +105,8 @@ After Round 8, the player with the most Victory Points (VP) wins (see Tournament
   \end{tabularx}
 }
 \begin{itemize}
-  \item After winning a Neutral Combat, you may sacrifice 3 \bronze\ Units to gain 1 \silver\ Unit you~defeated.
-  \item At the start of the next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck, \textit{and} Search (2) the \silver\ Neutral Deck.
+  \item After winning a Neutral Combat, you may sacrifice 2 \bronze\ Units to gain 1 \silver\ Unit you defeated.
+  \item At the start of the next turn, a defeated main Hero may Empower any Statistic Card from their M\&M Deck, and Search (2) the \silver\ Neutral Deck.
 \end{itemize}
 
 \begin{center}
