included settlement to victory condition and added obelisk rule

--- a/draft-scenarios/clash/mines_of_eldurim.tex
+++ b/draft-scenarios/clash/mines_of_eldurim.tex
@@ -38,30 +38,22 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Condition}}
-When a player captures their \nth{6} mine all players -- including that player -- take one final turn. After these turns or at the end of \nth{10} Round the game ends. The player who controls the most mines is the winner. If there is a tie, the tied player with most \svg{gold} wins.
+When a player captures their \nth{6} mine or settlement all players -- including that player -- take one final turn. After these turns or at the end of \nth{10} Round the game ends. The player who controls the most mines or settlements is the winner. If there is a tie, the tied player with most \svg{gold} wins.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
 \begin{itemize}
   \item Players may gain either 10 \svg{gold}, 5 \svg{building_materials} or 2 \svg{valuables}.
 \end{itemize}
-\textbf{\nth{3} Round:}
+\textbf{\nth{3}, \nth{5} and \nth{7} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes from the Map except Learning Stones.
+  \item Remove all Black Cubes from the Map except from Learning Stones.
 \end{itemize}
-\textbf{\nth{5} Round:}
-\begin{itemize}
-  \item Repeat the event of Round 3.
-\end{itemize}
-\textbf{\nth{7} Round:}
-\begin{itemize}
-  \item Repeat the event of Round 3.
-\end{itemize}
-
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item Players gain income every Round.
   \item A Secondary Hero starting their turn on I or II-III Map Tile gain +1 \svgeven{movement}.
+  \item \textbf{Obelisks:} Choose a Visitable Field from any IV-V Map Tile and gain that Field's reward. \textit{Visitable once per Faction.}
 \end{itemize}
 
 \begin{center}
