--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -44,7 +44,7 @@ The game ends when any of the following conditions are met:
 
 \begin{itemize}
   \item One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
-  \item One player has flagged all Obelisks. \textit{That player wins the game immediately.}
+  \item One player has flagged all 6 Obelisks. \textit{That player wins the game immediately.}
   \item At the end of Round 15.
 \end{itemize}
 
@@ -66,7 +66,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \begin{itemize}
   \item Player(s) whose Main Hero has the least \svg{experience}, Search (2) \svg{artifact}.
 \end{itemize}
-\textbf{\nth{9} Round:}
+\textbf{\nth{8} Round:}
 \begin{itemize}
   \item Repeat event of Round 4.
 \end{itemize}
@@ -85,17 +85,18 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item \textbf{Sanctuary:} Search (2) your Deck. \textit{Visitable once per Faction}.
   \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}. \textit{Can be flagged by multiple players.}
   \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
-  \item An \textbf{Astral Gate} cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to another random activated Astral Gate on the Map and arrive on an adjacent Field.
+  \item An \textbf{Astral Gate} cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to a different, randomly selected activated Astral Gate on the Map, arriving on a Field adjacent to it.
   \item Instead of teleporting randomly, a player may discard 1 Unit to choose the destination Astral Gate.
 \end{itemize}
   
   \begin{center}
   \vspace*{\fill}
-  \vspace*{\fill}
   \includegraphics[width=1.1\linewidth]{\maps/astral_run.png}
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
   \vspace*{\fill}
   \end{center}
+  
+\columnbreak
 
 \begin{itemize}
   \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
