--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -86,7 +86,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}. \textit{Can be flagged by multiple players.}
   \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
   \item An \textbf{Astral Gate} cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to a different, randomly selected activated Astral Gate on the Map, arriving on a Field adjacent to it.
-  \item Instead of teleporting randomly, a player may discard 1 Unit to choose the destination Astral Gate.
+  \item Instead of teleporting randomly, a player may reduce 1 Unit's \svg{health_points} to 0 to choose the destination Astral Gate.
 \end{itemize}
   
   \begin{center}
