--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -104,14 +104,8 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item \textbf{Level VII Settlement:} Increase all incomes by 1 space.
   \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for its recruitment cost.
   \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half of its recruitment cost.
-  \item \textbf{11 Round game:} Remove P × (IV-V) Map Tiles and replace the (VI-VII) Tile with a (IV-V) Map Tile.
+  \item \textbf{11 Round game:} Remove P × (IV-V) Map Tiles and replace the (VI-VII) Tile with a (IV-V) Map Tile without Obelisk.
 \end{itemize}
-
-%\end{multicols}
-
-%\begin{tikzpicture}[overlay, remember picture]
-%  \node[yshift=-12em] at (current page.center) {\includegraphics[width=0.84\linewidth]{\maps/%astral_run.png}};
-%\end{tikzpicture}
 
 \begin{center}
   \vspace*{\fill}
