Adjust astral map layout

--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Clash/Alliance Scenario}{Astral Run}{\images/astral.png}
 
-\begin{multicols}{2}
+\begin{multicols*}{2}
 
 \textbf{Author:} LAAMAKALA
 
@@ -88,14 +88,13 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item An \textbf{Astral Gate} cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to a different, randomly selected activated Astral Gate on the Map, arriving on a Field adjacent to it.
   \item Instead of teleporting randomly, a player may reduce 1 Unit's \svg{health_points} to 0 to choose the destination Astral Gate.
 \end{itemize}
-  
-  \begin{center}
-  \vspace*{\fill}
-  \includegraphics[width=1.1\linewidth]{\maps/astral_run.png}
+
+\vspace*{\fill}
+\begin{center}
+  \includegraphics[width=1.16\linewidth]{\maps/astral_run.png}
   \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
-  \vspace*{\fill}
-  \end{center}
-  
+\end{center}
+
 \columnbreak
 
 \begin{itemize}
@@ -108,11 +107,10 @@ If no player has achieved an immediate victory, the player with the most Victory
 \end{itemize}
 
 \begin{center}
-  \vspace*{\fill}
-  \vspace*{\fill}
-  \includegraphics[width=1.1\linewidth]{\maps/astral_run_short.png}
-  \captionof{figure}{\textbf{SHORT GAME MAP LAYOUT}}
-  \vspace*{\fill}
+  \hspace*{-2em}\includegraphics[width=1.16\linewidth]{\maps/astral_run_short.png}
+  \vspace*{-1em}
+  \hspace*{2em}\captionof{figure}{\textbf{SHORT GAME MAP LAYOUT}}
 \end{center}
+\vspace*{\fill}
 
-\end{multicols}\\
+\end{multicols*}
