--- a/draft-scenarios/clash/mines_of_eldurim.tex
+++ b/draft-scenarios/clash/mines_of_eldurim.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{The Mines of Eldurim}{\images/mines.png}
+\addscenariosection{1}{Clash Scenario}{Mines of Eldurim}{\images/mines.png}
 
 \begin{multicols*}{2}
 
@@ -53,7 +53,7 @@ When a player captures their \nth{6} mine or settlement all players -- including
 \begin{itemize}
   \item Players gain income every Round.
   \item A Secondary Hero starting their turn on I or II-III Map Tile gain +1 \svgeven{movement}.
-  \item \textbf{Obelisks:} Choose a Visitable Field from any IV-V Map Tile and gain that Field's reward. \textit{Visitable once per Faction.}
+  \item \textbf{Obelisks:} Choose a Visitable Field from any IV-V Map Tile and gain that Field's reward.
 \end{itemize}
 
 \begin{center}
