--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -60,7 +60,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes from the Map except from Learning Stones.
+  \item Remove all Black Cubes from the Map, except those on Learning Stones.
 \end{itemize}
 \textbf{\nth{6} Round:}
 \begin{itemize}
