--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -43,7 +43,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 The game ends when any of the following conditions are met:
 
 \begin{itemize}
-  \item One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
+  \item One player has defeated each of the other players' Main Heroes once. \textit{That player wins the game immediately.}
   \item One player has flagged all 6 Obelisks. \textit{That player wins the game immediately.}
   \item At the end of Round 15.
 \end{itemize}
