--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -81,7 +81,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Blocked Field on the Map Tile in the center does not count as blocked.
+  \item The Blocked Field on the Map Tile in the center is not considered blocked.
   \item \textbf{Sanctuary:} Search (2) your Deck. \textit{Visitable once per Faction}.
   \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}. \textit{Can be flagged by multiple players.}
   \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
