--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -103,7 +103,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item \textbf{Level VII Settlement:} Increase all incomes by 1 space.
   \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for its recruitment cost.
   \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half of its recruitment cost.
-  \item \textbf{11 Round game:} Remove P × (IV-V) Map Tiles and replace the (VI-VII) Tile with a (IV-V) Map Tile without Obelisk.
+  \item \textbf{11-Round game:} Remove P × Near (IV-V) Map Tiles and replace the Center (VI-VII) Tile with a Near (IV-V) Map Tile without an Obelisk.
 \end{itemize}
 
 \begin{center}
