--- a/draft-scenarios/clash/mines_of_eldurim.tex
+++ b/draft-scenarios/clash/mines_of_eldurim.tex
@@ -38,7 +38,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Condition}}
-When a player captures their \nth{6} mine or settlement all players -- including that player -- take one final turn. After these turns or at the end of \nth{10} Round the game ends. The player who controls the most mines or settlements is the winner. If there is a tie, the tied player with most \svg{gold} wins.
+When a player captures their \nth{6} mine or settlement, all players -- including that player -- take one final turn. After these turns or at the end of \nth{10} Round the game ends. The player who controls the most mines or settlements is the winner. If case of a tie, the tied player with most \svg{gold} is the winner.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{2} Round:}
@@ -52,8 +52,8 @@ When a player captures their \nth{6} mine or settlement all players -- including
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item Players gain income every Round.
-  \item A Secondary Hero starting their turn on I or II-III Map Tile gain +1 \svgeven{movement}.
-  \item \textbf{Obelisks:} Choose a Visitable Field from any IV-V Map Tile and gain that Field's reward.
+  \item A Secondary Hero starting their turn on I or II-III Map Tile gains +1 \svgeven{movement}.
+  \item \textbf{Obelisks:} Choose a Visitable Field from any IV-V Map Tile and gain it's reward.
 \end{itemize}
 
 \begin{center}
