Astral run - some adjustments (#242)

--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -1,32 +1,31 @@
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Clash/Alliance Scenario}{Astral Run}{\images/astral.png}
 
-\begin{multicols}{2}
+\begin{multicols*}{2}
 
 \textbf{Author:} LAAMAKALA
 
 \textit{Every move could be your last. Every gate a gamble. Glory belongs to the bold.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario plays out over 16 Rounds.
+This Scenario plays out over 15 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 6
 
-\textbf{Starting Resources:} 14 \svg{gold}, 4 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 16 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Pack \bronze\ Units of the player's choosing
+  \item A Pack of chosen \bronze\ Units
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \bronze\ Dwelling
-  \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -35,75 +34,83 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item 2P × Far (II-III) Map Tiles
-  \item P × Near (IV-V) Map Tile
+  \item P × Near (IV-V) Map Tiles
   \item 6 × Near (IV-V) Map Tiles with Obelisk
   \item 1 × Center (VI-VII) Map Tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-The game ends at the end of the Round when any of these conditions are met:
+The game ends when any of the following conditions are met:
 
 \begin{itemize}
-  \item One player has defeated each other player's Main Heroes once - \textit{That player wins the game immediately.}
-  \item One player controls the Center VII Field for 3 consecutive Rounds - \textit{That player wins the game immediately.}
-  \item At the end of Round 16.
+  \item One player has defeated each of the other players' Main Heroes once. \textit{That player wins the game immediately.}
+  \item One player has flagged all 6 Obelisks. \textit{That player wins the game immediately.}
+  \item At the end of Round 15.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
 If no player has achieved an immediate victory, the player with the most Victory Points (VP) wins.
-In addition to the Tournament Book's ``Scoring Victory Points'' section, players get VPs for:
 
 \begin{itemize}
-  \item 5 VP for the first player to flag the Center VII Field.
-  \item 1 VP for every flagged Mine and Settlement on Near and Center Tiles.
+  \item 5 VPs for the first player to flag the Center VII Field.
+  \item 3 VPs for each enemy Main Hero defeated.
+  \item 1 VP for each flagged Obelisk.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
-
-\textbf{\nth{1} Round:}
-\begin{itemize}
-  \item All Heroes gain +1 \svgeven{movement}.
-\end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
+  \item Remove all Black Cubes from the Map, except those on Learning Stones.
 \end{itemize}
 \textbf{\nth{6} Round:}
 \begin{itemize}
   \item Player(s) whose Main Hero has the least \svg{experience}, Search (2) \svg{artifact}.
 \end{itemize}
-\textbf{\nth{9} Round:}
+\textbf{\nth{8} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
+  \item Repeat event of Round 4.
 \end{itemize}
 \textbf{\nth{10} Round:}
 \begin{itemize}
-  \item Player(s) whose Main Hero has the least \svg{experience}, roll 2 \svg{resource}.
+  \item Player(s) whose Main Hero has the least \svg{experience}, gain 2 \svg{resource}.
 \end{itemize}
-\columnbreak
 \textbf{\nth{12} Round:}
 \begin{itemize}
-  \item Remove all Black Cubes.
-\end{itemize}
-\textbf{\nth{13} Round:}
-\begin{itemize}
-  \item All Heroes gain +1 \svgeven{movement}.
+  \item Repeat event of Round 4.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item \textbf{Sanctuary:} Gain 1 \svg{morale_positive} token and draw a Card from your Deck. \textit{Visitable once per Faction}.
-  \item \textbf{Obelisk:} Guarded by Level VI Neutrals. Roll 1 \svg{resource} and draw a Card from your Deck. \textit{Visitable once per Faction}.
-  \item Each blocked Field adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
-  \item An Astral Gate cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to another random activated Astral Gate on the Map and arrive on an adjacent Field.
-  \item Instead of teleporting randomly, a player may spend 1 \svg{morale_positive} to choose the destination Astral Gate.
-  \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
-  \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
-  \item Players do not have to pay \svg{gold} after losing a Combat against another player.
+  \item The Blocked Field on the Map Tile in the center is not considered blocked.
+  \item \textbf{Sanctuary:} Search (2) your Deck. \textit{Visitable once per Faction}.
+  \item \textbf{Obelisk:} Guarded by Level VI Neutral Units. Search (2) \svg{skill}, \svg{spellpower} or \svg{artifact}. \textit{Can be flagged by multiple players.}
+  \item Each \textbf{blocked Field} adjacent to an Obelisk is a two-way Astral Gate, which only becomes active after that Obelisk has been visited.
+  \item An \textbf{Astral Gate} cannot be entered from a different Map Tile. When a Hero enters an Astral Gate, they are teleported to a different, randomly selected activated Astral Gate on the Map, arriving on a Field adjacent to it.
+  \item Instead of teleporting randomly, a player may reduce 1 Unit's \svg{health_points} to 0 to choose the destination Astral Gate.
 \end{itemize}
 
-\end{multicols}
+\vspace*{\fill}
+\begin{center}
+  \includegraphics[width=1.16\linewidth]{\maps/astral_run.png}
+  \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
+\end{center}
 
-\begin{tikzpicture}[overlay, remember picture]
-  \node[yshift=-12em] at (current page.center) {\includegraphics[width=0.85\linewidth]{\maps/astral_run.png}};
-\end{tikzpicture}
+\columnbreak
+
+\begin{itemize}
+  \item Gain 1 \svg{experience} after a Combat against an enemy Main Hero.
+  \item A defeated Main Hero may Empower one Defense Statistic Card from their M\&M Deck.
+  \item \textbf{Level VII Settlement:} Increase all incomes by 1 space.
+  \item \textbf{Random Town:} You may recruit one Faction Unit you defeated for its recruitment cost.
+  \item \textbf{Dragon Utopia:} You may recruit one dragon you defeated for half of its recruitment cost.
+  \item \textbf{11-Round game:} Remove P × Near (IV-V) Map Tiles and replace the Center (VI-VII) Tile with a Near (IV-V) Map Tile without an Obelisk.
+\end{itemize}
+
+\begin{center}
+  \hspace*{-2em}\includegraphics[width=1.16\linewidth]{\maps/astral_run_short.png}
+  \vspace*{-1em}
+  \hspace*{2em}\captionof{figure}{\textbf{SHORT GAME MAP LAYOUT}}
+\end{center}
+\vspace*{\fill}
+
+\end{multicols*}
